# play-chess-with-a-webcam

./: .gitignore  .project  .pydevproject  .travis.yml  404.html  Args.py  BoardFinder.py  Cell.py  ChessCam.py  GameEngine.py  InputManager.py  LICENSE  MovementDetector.py  README.md  StateDetector.py  Video.py  VideoMaker.py  boardFinder.py  chessUtils.py  index.html  inputManager.py  install  mathUtils.py  mkdocs.yml  objects.inv  pyproject.toml  record  requirements.txt  run  state.py  still  test  test_Video.py  test_findBoard.py  test_readVideo.py  uci.py
.github/workflows/: build.yml  upload-to-pypi.yml
examples/matplotlib/: image_show.py
examples/opencv/: chessboardcorners.py  colorcluster.py  harris_detector.py  histogram.py  histogram2.py  idealboard.py  laplace.py  otsu.py  screengrab.py  warp.py
opencvtutorial/: colorcluster.py  histogramm.py  hough_lines.py  mousetracker.py  screengrab.py  screengrab2.py  warp.py
pcwawc/: Board.py  BoardDetector.py  BoardFinder.py  Cell.py  ChessCam.py  ChessTrapezoid.py  Environment.py  Environment4Test.py  FPSCheck.py  Field.py  Game.py  GameEngine.py  InputManager.py  JsonAbleMixin.py  MovementDetector.py  PlotLib.py  RunningStats.py  StateDetector.py  Video.py  WebApp.py  YamlAbleMixin.py  args.py  board.py  boarddetector.py  boardfinder.py  cdd.py  chessengine.py  chessimage.py  chesstrapezoid.py  chessvision.py  ciede2000.py  config.py  detectorfactory.py  detectstate.py  environment.py  environment4test.py  eventhandling.py  field.py  fpscheck.py  game.py  (+18 more)
pcwawc/templates/: header.html  index.html  js.html  menu.html
scripts/: blackisort  colormsg  doc  install  plantumldoc  record  release  run  runweb  still  test
search/: search_index.json
src/: Args.py  Board.py  BoardDetector.py  BoardFinder.py  Cell.py  ChessCam.py  ChessTrapezoid.py  Environment.py  Environment4Test.py  FPSCheck.py  Field.py  Game.py  GameEngine.py  HelpTesting.py  Histogram.py  IdealBoard.py  InputManager.py  JsonAbleMixin.py  MovementDetector.py  PlotLib.py  RunningStats.py  StateDetector.py  Video.py  WebApp.py  YamlAbleMixin.py  cdd.py  ciede2000.py  mathUtils.py  requirements.txt  state.py  test_Args.py  test_Board.py  test_BoardDetector.py  test_ChessCam.py  test_ChessTrapezoid.py  test_Field.py  test_FieldROI.py  test_Game.py  test_Histogram.py  test_IdealBoard.py  (+8 more)
src/imutils/: __init__.py  perspective.py
src/templates/: footer.html  header.html  index.html  js.html  menu.html
testMedia/: baxter.avi  chessBoard001-webcamgame.json  chessBoard001.json  emptyBoard001.avi  scholarsmate.avi
tests/: test_Args.py  test_BoarDetector.py  test_Board.py  test_BoardDetector.py  test_BoardFinder.py  test_ChessCam.py  test_ChessEngine.py  test_ChessTrapezoid.py  test_ChessTrapezoid_t1-1.py  test_ColorDistribution.py  test_DetectState.py  test_EventHandling.py  test_Field.py  test_FieldROI.py  test_Game.py  test_Histogram.py  test_OpenCV_version.py  test_RunningStats.py  test_StateDetector.py  test_Video.py  test_Warp.py  test_boarddetector.py  test_chessengine.py  test_chessvision.py  test_config.py  test_eventhandling.py  test_findBoard.py  test_lichess.py  test_simpledetector.py  test_videoanalyzer.py
web/css/: main.css  webcamchess.css
web/js/: game.js  webcamchess.js
