[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "play-chess-with-a-webcam"
description = "Play chess with a webcam"
keywords = ["chess", "webcam", "computer vision", "lichess"]

authors = [
    {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
    {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_tutorials.html
    "opencv-python==4.10.0.84",
    # python-chess
    # https://buildmedia.readthedocs.org/media/pdf/python-chess/latest/python-chess.pdf
    # https://pypi.org/project/chess/
    "python-chess==0.30.0",
    # lichess APIs
    # https://github.com/rhgrant10/berserk
    "berserk==0.3.1",
    # https://github.com/cyanfish/python-lichess
    "python-lichess==0.9",
    # image utils
    "imutils==0.5.3",
    # web tools
    "Flask==1.1.1",
    "Flask-RESTful==0.3.9",
    "Flask-AutoIndex==0.6.4",
    # config and state saving
    "PyYAML>=6.0.2",
    # mss https://pypi.org/project/mss/ An ultra fast cross-platform multiple screenshots module in pure python using ctypes.
    "mss==4.0.3",
    # PIL Python Image Library fork see https://pillow.readthedocs.io/en/stable/
    "Pillow==9.0.0",
    # Json pickle
    "jsonpickle==1.2",
    # zope interfaces
    "interface==2.11.1",
]

requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]

[tool.hatch.version]
path = "pcwawc/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/play-chess-with-a-webcam"
Documentation = "https://wiki.bitplan.com/index.php/Play-chess-with-a-webcam"
Source = "https://github.com/WolfgangFahl/play-chess-with-a-webcam"

[project.optional-dependencies]
test = [
    "pytest==6.2.1",
    "matplotlib==3.3.3",
    "scipy==1.5.4",
    "pytest-cov==2.8.1",
]

[tool.hatch.build.targets.wheel]
only-include = ["pcwawc"]

[tool.hatch.build.targets.wheel.sources]
"pcwawc" = "pcwawc"

[project.scripts]
pcwawc = "pcwawc.pcwawc_cmd:main"